--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <div id="app"></div>
   <script type="text/javascript" src="/static/js/manifest.2ae2e69a05c33dfc65f8.js"></script>
   <script type="text/javascript" src="/static/js/vendor.d5ced11d648e0dba51c8.js"></script>
- 
+  <script type="text/javascript" src="/static/js/app.5ffe06ff6f8b21ce8002.js"></script> 
  </body>
 </html>
